--- a/configs/sdfusion-shift-txt2shape.yaml
+++ b/configs/sdfusion-shift-txt2shape.yaml
@@ -11,7 +11,6 @@ shift_predictor:
     input_dim: 512
     image_channel: 3
     image_size: 16
-    cond_model: 'bert'
 
 bert:
   params:
@@ -23,16 +22,23 @@ unet:
     image_size: 16
     in_channels: 3
     out_channels: 3
-    model_channels: 192
+    model_channels: 224
     num_res_blocks: 2
-    attention_resolutions: [ 1,2,4 ] # 16, 8, 4
+    attention_resolutions: [ 4, 2 ] # 16, 8, 4
     # note: this isn\t actually the resolution but
     # the downsampling factor, i.e. this corresnponds to
     # attention on spatial resolution 8,16,32, as the
     # spatial reolution of the latents is 64 for f4
-    channel_mult: [ 1,2,4,4 ]
+    channel_mult: [ 1, 2, 3 ]
     # num_head_channels: 32
-    num_heads: 6
+    num_heads: 8
 
     # 3d
     dims: 3
+
+    # cond_model params
+    use_spatial_transformer: true
+    transformer_depth: 1
+    context_dim: 1280
+    use_checkpoint: true
+    legacy: False
