fix s_minus_one to -1 bug

--- a/configs/sdfusion-shift-txt2shape.yaml
+++ b/configs/sdfusion-shift-txt2shape.yaml
@@ -8,10 +8,22 @@ model:
 
 shift_predictor:
   params:
-    input_dim: 512
-    image_channel: 3
     image_size: 16
-    cond_model: 'bert'
+    in_channels: 3
+    out_channels: 3
+    model_channels: 96
+    num_res_blocks: 2
+    attention_resolutions: [ 1,2,4 ] # 16, 8, 4
+    # note: this isn\t actually the resolution but
+    # the downsampling factor, i.e. this corresnponds to
+    # attention on spatial resolution 8,16,32, as the
+    # spatial reolution of the latents is 64 for f4
+    channel_mult: [ 1,2,4,4 ]
+    # num_head_channels: 32
+    num_heads: 6
+
+    # 3d
+    dims: 3
 
 bert:
   params:
